--- a/styles1.css
+++ b/styles1.css
@@ -27,10 +27,10 @@
     text-align: center;
     }
     button {
-        color: #c3cedd;
+        color: #cdd3db;
         padding: 10px 25px;
         background: transparent;
-        border: 1px solid #ece8e8;
+        border: 1px solid #f3e5e5;
         border-radius: 160px;
         outline: none;
         cursor: pointer;
@@ -39,18 +39,25 @@
        }
        
        button:hover {
-        background-color: #dde2b1;
+        background-color: #e7e7e0;
        }
        
        h1 {
         font-size: 80px;
         margin: 10px 0 30px;
         line-height: 80px;
-        color: white;
+        color: rgb(29, 4, 4);
+       }
+
+       h3 {
+        font-size: 40px;
+        margin: 10px 0 30px;
+        line-height: 20px;
+        color: rgb(29, 4, 4);
        }
        h2{
         font-size: 72px;
-        color: rgb(244, 244, 248);
+        color: rgb(2, 2, 20);
         margin-top: 40px;
        }
        
@@ -127,11 +134,11 @@
   font-size: 40px;
   margin: 10px 0 30px;
   line-height: 40px;
-  color: white;
+  color: rgb(2, 0, 0);
  }
  h2{
   font-size: 36px;
-  color: rgb(244, 244, 248);
+  color: rgb(1, 1, 14);
   margin-top: 20px;
  }
  }
